# genesis_torch

./: README.md  configure.ac  requirements.txt
atg13/1_setup/: 1_cg.gro  1_cg.itp  1_cg.psf  1_cg.top
atg13/2_equilibrate/: run.inp  run.rst  run.vmd
atg13/3_production/: run.inp  run.vmd  run_torch.inp
src/analysis/trj_analysis/energy_analysis/: Makefile.am
src/atdyn/: Makefile.am  at_enefunc_restraints.fpp  at_energy_restraints.fpp  at_restraints_str.fpp
src/lib/: Makefile.am  torch_interface.fpp
wrapper/: CMakeLists.txt  README.md  torch_interface.f90  torch_main.f90  torch_wrapper.cpp  traced_force_model.py
